--- a/url-shortener/src/components/Statistics/_statistics.scss
+++ b/url-shortener/src/components/Statistics/_statistics.scss
@@ -8,14 +8,14 @@ section#advanced-statistics {
   }
 
   .flex-container {
-    padding: 10px;
+    // padding: 10px;
     display: flex;
     max-width: 1200px;
     margin: auto;
     gap: 20px;
   }
   .card {
-    background-color: white;
+    background-color: variables.$white;
     padding: 60px 30px 30px;
     border-radius: 5px;
     position: relative;
@@ -37,7 +37,7 @@ section#advanced-statistics {
 
   section#boost {
     background-color: variables.$dark-violet;
-    color: white;
+    color: variables.$white;
     text-align: center;
     padding: 30px 10px;
     h1 {
@@ -46,7 +46,7 @@ section#advanced-statistics {
     }
     button {
       border: none;
-      color: white;
+      color: variables.$white;
       background-color: variables.$cyan;
       border-radius: 20px;
       padding: 10px 20px;
@@ -68,6 +68,7 @@ section#advanced-statistics {
       margin-bottom: 33px;
     }
     .flex-container {
+      padding: 10px;
       flex-direction: column;
     }
   }
@@ -75,7 +76,7 @@ section#advanced-statistics {
 
 @media (min-width: 650px) {
   section#advanced-statistics {
-    margin-top: 40px;
+    // margin-top: 60px;
     h2 {
       font-size: 30px;
     }
@@ -87,7 +88,19 @@ section#advanced-statistics {
     p:nth-of-type(1) {
       margin-bottom: 20px;
     }
+    .flex-container::after {
+      content: " ";
+      width: 95%;
+      height: 15px;
+      background-color: variables.$cyan;
+      position: absolute;
+      z-index: -99;
+      top: 50%;
+    }
     .flex-container {
+      margin-block: 40px;
+      position: relative;
+      gap: 25px;
       .card:nth-of-type(2) {
         position: relative;
         bottom: -40px;
@@ -100,10 +113,10 @@ section#advanced-statistics {
     section#boost {
       margin-top: 150px;
       padding: 40px;
-      h1{
+      h1 {
         font-size: 2rem;
       }
-      button{
+      button {
         padding: 10px 30px;
         // margin-bottom: 10px;
       }
