--- a/url-shortener/src/styles/_variables.scss
+++ b/url-shortener/src/styles/_variables.scss
@@ -1,11 +1,13 @@
 $cyan: hsl(180, 66%, 49%);
 $dark-violet: hsl(257, 27%, 26%);
+$white: white;
 
 $red: hsl(0, 87%, 67%);
 
 $gray: hsl(0, 0%, 75%);
-$grayish-violet:hsl(257, 7%, 63%);
+$grayish-violet: hsl(257, 7%, 63%);
 $very-dark-blue: hsl(255, 11%, 22%);
 $very-dark-violet: hsl(260, 8%, 14%);
 
-$apple-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$apple-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
