--- a/url-shortener/src/styles/styles.css
+++ b/url-shortener/src/styles/styles.css
@@ -274,7 +274,7 @@ section#link-container .copy input {
 
 @media (min-width: 650px) {
   section#link-container {
-    margin-block: 30px 60px;
+    margin-block: 30px 90px;
   }
   section#link-container section#link {
     padding: 50px 60px;
@@ -346,7 +346,6 @@ section#advanced-statistics h2 {
   margin-bottom: 5px;
 }
 section#advanced-statistics .flex-container {
-  padding: 10px;
   display: flex;
   max-width: 1200px;
   margin: auto;
@@ -403,13 +402,11 @@ section#advanced-statistics section#boost button:hover {
     margin-bottom: 33px;
   }
   section#advanced-statistics .flex-container {
+    padding: 10px;
     flex-direction: column;
   }
 }
 @media (min-width: 650px) {
-  section#advanced-statistics {
-    margin-top: 40px;
-  }
   section#advanced-statistics h2 {
     font-size: 30px;
   }
@@ -420,6 +417,20 @@ section#advanced-statistics section#boost button:hover {
   }
   section#advanced-statistics p:nth-of-type(1) {
     margin-bottom: 20px;
+  }
+  section#advanced-statistics .flex-container::after {
+    content: " ";
+    width: 95%;
+    height: 15px;
+    background-color: hsl(180, 66%, 49%);
+    position: absolute;
+    z-index: -99;
+    top: 50%;
+  }
+  section#advanced-statistics .flex-container {
+    margin-block: 40px;
+    position: relative;
+    gap: 25px;
   }
   section#advanced-statistics .flex-container .card:nth-of-type(2) {
     position: relative;
