--- a/landing-page/src/components/Hero/_hero.scss
+++ b/landing-page/src/components/Hero/_hero.scss
@@ -80,7 +80,7 @@ section#hero {
     display: none;
   }
   section#hero {
-    padding-top: 4em;
+    // padding-top: 4em;
     max-width: 1150px;
     margin: auto;
     display: flex;
