--- a/news-homepage/styles/style.css
+++ b/news-homepage/styles/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+button:hover {
+  opacity: 0.8;
+}
+
 body {
   font-family: Inter, sans-serif;
   padding-inline: 10px;
@@ -110,7 +114,7 @@ section.topics .container p {
   aside ul li a {
     text-decoration: none;
     color: hsl(236, 13%, 42%);
-    font-size: 22px;
+    font-size: 20px;
   }
   .open-aside {
     transform: translate(0%);
@@ -189,8 +193,7 @@ section.topics .container p {
     align-items: center;
   }
   header ul a {
-    -webkit-margin-end: 10px;
-            margin-inline-end: 10px;
+    margin-left: 10px;
     font-size: 18px;
   }
   header ul a:hover {
