--- a/interactive-card-details/src/components/_mobileCard.scss
+++ b/interactive-card-details/src/components/_mobileCard.scss
@@ -21,10 +21,11 @@ section#mobileCard {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    display: grid;
-    place-content: center;
-    font-size: 16px;
-    padding: 0 0 5px 220px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 30px;
+    padding-bottom: 3px;
     margin-left: auto;
     z-index: 99;
   }
