--- a/interactive-card-details/src/styles/_variables.scss
+++ b/interactive-card-details/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $secondary-border: hsl(278, 94%, 30%);
 
 // neutral colors
 $white: hsl(0, 0%, 100%);
+$red: red;
 $light-gray-violet: hsl(270, 3%, 87%);
 $dark-grayish-violet: hsl(279, 6%, 55%);
 $very-dark-violet: hsl(278, 68%, 11%);
