--- a/interactive-card-details/src/styles/styles.css
+++ b/interactive-card-details/src/styles/styles.css
@@ -9,6 +9,9 @@
 body img {
   max-width: 100%;
 }
+body input:focus {
+  outline: 1px solid blue;
+}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -86,7 +89,7 @@ section#form button {
   cursor: pointer;
 }
 
-@media (min-width: 950px) {
+@media (min-width: 1050px) {
   .hide-on-desktop {
     display: none;
   }
@@ -94,6 +97,7 @@ section#form button {
     display: block;
   }
   main {
+    padding-right: 40px;
     min-height: 100vh;
     width: 100vw;
     display: flex;
@@ -105,9 +109,8 @@ section#form button {
     left: 0;
     width: 30%;
     background: url("../assets/bg-main-desktop.png");
-    margin-right: 10px;
     background-size: cover;
-    color: white;
+    color: hsl(0, 0%, 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -115,9 +118,8 @@ section#form button {
     gap: 20px;
   }
   main #desktop-cards .card {
-    background-color: gainsboro;
-    width: 340px;
-    height: 200px;
+    width: 360px;
+    height: 210px;
     border-radius: 10px;
     padding: 20px;
   }
@@ -129,22 +131,22 @@ section#form button {
   main #desktop-cards .front-card .ball-container {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 8px;
   }
   main #desktop-cards .front-card .ball-container .ball1 {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
   }
   main #desktop-cards .front-card .ball-container .ball2 {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid hsl(0, 0%, 100%);
   }
   main #desktop-cards .front-card #card-number {
-    font-size: 23px;
+    font-size: 25px;
     letter-spacing: 2px;
     margin-block: 50px 15px;
     display: block;
