--- a/url-shortener/src/components/LinkInput/_linkInput.scss
+++ b/url-shortener/src/components/LinkInput/_linkInput.scss
@@ -33,7 +33,7 @@ section#link-container {
         border-radius: 5px;
         width: 100%;
         height: 35px;
-        padding-inline: 5px;
+        padding-inline: 10px;
         border: none;
 
         &:focus {
@@ -45,16 +45,15 @@ section#link-container {
 
   .copy {
     display: flex;
-    padding: 10px 20px;
+    padding:  20px;
     background-color: variables.$white;
     border-radius: 10px;
     margin-top: 10px;
     button {
       border: none;
-
       background-color: variables.$cyan;
       color: variables.$white;
-      padding: 5px 10px;
+      padding: 6px 15px;
       border-radius: 5px;
       cursor: pointer;
     }
